# jiraTimesheet

./: .env.example  .gitignore  Dockerfile.dev  README.md  docker-compose.yml  index.html  package-lock.json  package.json
src/: jira.js  main.js  style.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: config.rs  jira.rs  lib.rs  main.rs  timer.rs
